--- a/ireti-src/package.json
+++ b/ireti-src/package.json
@@ -16,7 +16,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-pager-view": "^6.3.1",
     "react-native-paper": "^5.12.3",
+    "react-native-paper-tabs": "^0.10.4",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
